updated my home css file to fix the larger image issue on mobile devices

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -154,6 +154,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  max-height: 300px;
   overflow: hidden;
 }
 
@@ -168,6 +169,7 @@
 .homeImage {
     width: 100%;
     height: 100%;
+    max-height: 300px;
     object-fit: cover;
 }
 
